# TimerExpiry-Refactoring-Kata

./: .gitignore  README.md
c/: CMakeLists.txt  timers.c  timers.h
c/lib/: ApprovalTests.hpp
c/lib/catch2/: catch.hpp
c/src/: CMakeLists.txt  timers.c
c/test/: CMakeLists.txt
c/test/catch2_approvaltest/: CMakeLists.txt  TimerExpiryCatch2ApprovalTests.TimerExpiry.All_timers_set.approved.txt  TimerExpiryCatch2ApprovalTests.TimerExpiry.ZB12_modified.approved.txt  TimerExpiryCatch2ApprovalTests.cpp
c/test/catch2_unittest/: CMakeLists.txt  timers_test.cpp
c/test/googletest_approvaltest/: CMakeLists.txt  TimerExpiryGoogletestApprovalTests.TimerExpiryTest.NoTimersSet.approved.txt  TimerExpiryGoogletestApprovalTests.cpp
c/test/googletest_unittest/: CMakeLists.txt  TimerExpiryGoogletestUnitTests.cpp
c/test/printers/: CMakeLists.txt  printers.h
c/tests/: timers_test.cpp
cpp/: AlarmClock.h  CMakeLists.txt  README.md  alarm_clock.c  alarm_clock.h
cpp/tests/: CMakeLists.txt  alarm_clock_test.cpp  alarm_clock_test.how_long_until_the_next_alarm.DY9Xd.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.P88N.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.TIME_QUOTA.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.ZB12.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.ZB12_unmodified.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.idt_alarm.approved.txt  alarm_clock_test.how_long_until_the_next_alarm.monitoring_time.approved.txt  alarm_clock_test.no_alarms_are_set.approved.txt  (+3 more)
csharp/: TimerExpiryProject.sln
(+16 files in other folders)
